# Kerninghan_Ritchie_Atmadeep

./: .gitignore  1-10.c  1-12.c  1-13.c  1-14.c  1-15.c  1-17.c  1-19.c  1-3.c  1-4.c  1-5.c  1-6.c  1-7.c  1-8.c  1-9.c  2-3.c  2-4.c  2-5.c  CMakeLists.txt  custom.h
